--- a/apache.conf
+++ b/apache.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
     ServerAdmin admin@linoo.ch
     DocumentRoot /var/www/framadate
-    ServerName framedate.local
+    ServerName framadate.local
 
     <Directory /var/www/framadate>
-        Options FollowSymLinks
+        Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Require all granted
     </Directory>
