--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,6 @@ services:
       context: .
     ports:
       - "80:80"
-    environment:
-      - MYSQL_HOST=mysql
-      - MYSQL_DATABASE=framadate
-      - MYSQL_USER=framadate
-      - MYSQL_PASSWORD=your_password
     depends_on:
       - mysql
   mysql:
@@ -19,3 +14,12 @@ services:
       - MYSQL_DATABASE=framadate
       - MYSQL_USER=framadate
       - MYSQL_PASSWORD=your_password
+    volumes:
+      - mysql_data:/var/lib/mysql
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
+
+volumes:
+  mysql_data:
