Change Mounte framadate-config.php via Doc Compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "80:80"
     depends_on:
       - mysql
+    volumes:
+      - ./framadate-config.php:/var/www/framadate/app/inc/config.php
   mysql:
     image: mysql:5.7
     environment:
