Edit Github Action

--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -12,5 +12,5 @@ jobs:
         run: docker build . --tag ghcr.io/surmatik/framadate-ceviwetzikon:latest
       - name: Bei GHCR anmelden und veröffentlichen
         run: |
-          echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u surmatik --password-stdin
+          echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u surmatik --password-stdin
           docker push ghcr.io/surmatik/framadate-ceviwetzikon:latest
